[gd_scene load_steps=42 format=2]

[ext_resource path="res://character/Character.gd" type="Script" id=1]
[ext_resource path="res://character/sheets/palettes/body_shader.tres" type="Material" id=2]
[ext_resource path="res://character/AnimLimb.gd" type="Script" id=3]
[ext_resource path="res://character/sheets/palettes/palette_body.png" type="Texture" id=4]
[ext_resource path="res://character/sheets/body/idle.json" type="PackedScene" id=5]
[ext_resource path="res://character/animnode.gd" type="Script" id=6]
[ext_resource path="res://character/sheets/body/idle_mask.png" type="Texture" id=7]
[ext_resource path="res://character/sheets/body/walk.json" type="PackedScene" id=8]
[ext_resource path="res://character/sheets/body/walk_mask.png" type="Texture" id=9]
[ext_resource path="res://character/sheets/body/crouch.json" type="PackedScene" id=10]
[ext_resource path="res://character/sheets/body/crouch_mask.png" type="Texture" id=11]
[ext_resource path="res://character/sheets/body/run.json" type="PackedScene" id=12]
[ext_resource path="res://character/sheets/body/run_mask.png" type="Texture" id=13]
[ext_resource path="res://character/sheets/palettes/head_shader.tres" type="Material" id=14]
[ext_resource path="res://character/sheets/palettes/palette_head.png" type="Texture" id=15]
[ext_resource path="res://character/sheets/head/idle.json" type="PackedScene" id=16]
[ext_resource path="res://character/sheets/head/idle_mask.png" type="Texture" id=17]
[ext_resource path="res://character/sheets/palettes/hair_shader.tres" type="Material" id=18]
[ext_resource path="res://character/sheets/palettes/palette_hair.png" type="Texture" id=19]
[ext_resource path="res://character/sheets/hair/john.json" type="PackedScene" id=20]
[ext_resource path="res://character/sheets/hair/john_mask.png" type="Texture" id=21]
[ext_resource path="res://character/sheets/hair/gina.json" type="PackedScene" id=22]
[ext_resource path="res://character/sheets/hair/gina_mask.png" type="Texture" id=23]
[ext_resource path="res://character/sheets/hair/looseponytail.json" type="PackedScene" id=24]
[ext_resource path="res://character/sheets/hair/looseponytail_mask.png" type="Texture" id=25]
[ext_resource path="res://character/sheets/hair/ragged.json" type="PackedScene" id=26]
[ext_resource path="res://character/sheets/hair/ragged_mask.png" type="Texture" id=27]
[ext_resource path="res://character/WeaponPivot.gd" type="Script" id=28]
[ext_resource path="res://character/InteractArea.gd" type="Script" id=29]
[ext_resource path="res://shadow.png" type="Texture" id=30]
[ext_resource path="res://character/Health.gd" type="Script" id=31]
[ext_resource path="res://character/FoVOccluder.gd" type="Script" id=32]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.67582
height = 6.07544

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( -192, 256, 0, 0, -192, -256, -256, -256, -256, 256 )

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 4, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 4, 0.25, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( -10, -2 ), Vector2( -10, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "bodyFall"
} ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FeetCollider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyCollider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pivot:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 0, 0, 0, 0 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 0.25, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.25, 4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 0, 0, 0, 0 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Pivot" type="Position2D" parent="."]

[node name="Body" type="Node2D" parent="Pivot"]
material = ExtResource( 2 )
script = ExtResource( 3 )
base_palette = ExtResource( 4 )

[node name="idle" parent="Pivot/Body" instance=ExtResource( 5 )]
use_parent_material = true
position = Vector2( 0, -15 )
script = ExtResource( 6 )
image_mask = ExtResource( 7 )

[node name="walk" parent="Pivot/Body" instance=ExtResource( 8 )]
visible = false
use_parent_material = true
position = Vector2( 0, -15 )
script = ExtResource( 6 )
image_mask = ExtResource( 9 )

[node name="crouch" parent="Pivot/Body" instance=ExtResource( 10 )]
visible = false
use_parent_material = true
position = Vector2( 0, -15 )
script = ExtResource( 6 )
image_mask = ExtResource( 11 )

[node name="run" parent="Pivot/Body" instance=ExtResource( 12 )]
visible = false
use_parent_material = true
position = Vector2( 0, -15 )
script = ExtResource( 6 )
image_mask = ExtResource( 13 )

[node name="Head" type="Node2D" parent="Pivot"]
material = ExtResource( 14 )
position = Vector2( 0, -18 )
script = ExtResource( 3 )
base_palette = ExtResource( 15 )

[node name="idle" parent="Pivot/Head" instance=ExtResource( 16 )]
use_parent_material = true
script = ExtResource( 6 )
image_mask = ExtResource( 17 )

[node name="Hair" type="Node2D" parent="Pivot"]
material = ExtResource( 18 )
position = Vector2( 0, -18 )
script = ExtResource( 3 )
base_palette = ExtResource( 19 )
current_anim = "john"

[node name="john" parent="Pivot/Hair" instance=ExtResource( 20 )]
use_parent_material = true
script = ExtResource( 6 )
image_mask = ExtResource( 21 )

[node name="gina" parent="Pivot/Hair" instance=ExtResource( 22 )]
visible = false
use_parent_material = true
script = ExtResource( 6 )
image_mask = ExtResource( 23 )

[node name="looseponytail" parent="Pivot/Hair" instance=ExtResource( 24 )]
visible = false
use_parent_material = true
script = ExtResource( 6 )
image_mask = ExtResource( 25 )

[node name="ragged" parent="Pivot/Hair" instance=ExtResource( 26 )]
visible = false
use_parent_material = true
script = ExtResource( 6 )
image_mask = ExtResource( 27 )

[node name="WeaponPivot" type="Position2D" parent="."]
position = Vector2( 0, -10 )
script = ExtResource( 28 )

[node name="WeaponSpawn" type="Position2D" parent="WeaponPivot"]
position = Vector2( 10, 0 )

[node name="HitboxArea" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="HitboxArea"]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 0, -13 )
shape = SubResource( 1 )

[node name="InteractArea" type="Area2D" parent="."]
show_behind_parent = true
script = ExtResource( 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
modulate = Color( 1, 0, 1, 1 )
shape = SubResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.486196 )
show_behind_parent = true
texture = ExtResource( 30 )

[node name="BodyCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -13 )
shape = SubResource( 1 )
disabled = true

[node name="FeetCollider" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -16 )
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="FoVPivot" type="Position2D" parent="."]
position = Vector2( 0, -16 )
script = ExtResource( 32 )

[node name="FoVOccluder" type="LightOccluder2D" parent="FoVPivot"]
position = Vector2( -16, 0 )
occluder = SubResource( 9 )

[node name="GlobalAnim" type="AnimationPlayer" parent="."]
anims/death = SubResource( 4 )
anims/root = SubResource( 5 )
anims/run = SubResource( 6 )
anims/stagger = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 31 )

[node name="Inventory" type="Node" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
max_distance = 512.0

[connection signal="direction_changed" from="." to="Pivot/Body" method="_on_Character_direction_changed"]
[connection signal="direction_changed" from="." to="Pivot/Head" method="_on_Character_direction_changed"]
[connection signal="direction_changed" from="." to="Pivot/Hair" method="_on_Character_direction_changed"]
[connection signal="area_entered" from="InteractArea" to="InteractArea" method="_on_area_entered"]
[connection signal="area_exited" from="InteractArea" to="InteractArea" method="_on_area_exited"]
[connection signal="item_tracked" from="InteractArea" to="." method="_on_InteractArea_item_tracked"]
[connection signal="item_untracked" from="InteractArea" to="." method="_on_InteractArea_item_untracked"]
[connection signal="damaged" from="Health" to="." method="_on_Health_damaged"]
[connection signal="health_changed" from="Health" to="." method="_on_Health_changed"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
